--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "lite-server"
   },
   "author": "'yogendra.atluri'",
   "license": "ISC",
@@ -15,5 +15,8 @@
     "babel-preset-es2015": "^6.24.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
+  },
+  "dependencies": {
+    "lite-server": "^2.3.0"
   }
 }
